# perry

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  FEATURE_AUDIT.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  run_parity_tests.sh  run_tests.sh  test-imports-b.ts  test-imports-c.ts  test-local-array.ts  test-module-b.ts  test-module-c.ts  test_async_return.ts  test_async_return2.ts  test_async_return3.ts  test_async_return4.ts  test_async_return5.ts  test_child_process.ts  test_cross_async.ts  test_cross_await.ts  test_cross_debug.ts  test_cross_module.ts  test_cross_string.ts  test_fastify.ts  test_fastify_create.ts  test_fastify_debug.ts  test_fastify_route.ts  test_fastify_simple.ts  test_fs_path.ts  test_indexof.ts  test_large_string_async.ts  test_module_a.ts  test_module_sync.ts  (+25 more)
benchmarks/: bench_array_bce.ts  bench_array_inbounds.ts  bench_array_micro.ts  bench_array_micro_bce.ts  bench_array_ops.ts  bench_array_ops_bce.ts  bench_array_read_only.ts  bench_array_swap.ts  bench_array_unchecked.ts  bench_array_write_only.ts  bench_bitwise.ts  bench_fibonacci.ts  bench_loop_only.ts  bench_read_arrlength.ts  bench_read_compare.ts  bench_string_ops.ts  bench_write_arrlength.ts  bench_write_constant.ts  run_benchmarks.sh  simple_loop  test_inline.ts  test_inline_manual.ts
benchmarks/results/: benchmark_results_20260117_205235.txt  benchmark_results_20260117_205405.txt  benchmark_results_20260117_210134.txt  benchmark_results_20260117_210344.txt  benchmark_results_20260117_211232.txt  benchmark_results_20260117_211739.txt  benchmark_results_20260117_212802.txt  benchmark_results_20260117_213527.txt  benchmark_results_20260117_215206.txt  benchmark_results_20260117_220453.txt  benchmark_results_20260117_223516.txt  benchmark_results_20260117_223847.txt  benchmark_results_20260117_224354.txt  benchmark_results_20260117_225119.txt  benchmark_results_20260118_084128.txt
benchmarks/suite/: 01_startup  01_startup.ts  02_loop_overhead  02_loop_overhead.ts  03_array_write  03_array_write.ts  04_array_read  04_array_read.ts  05_fibonacci  05_fibonacci.ts  06_math_intensive  06_math_intensive.ts  07_object_create  07_object_create.ts  08_string_concat  08_string_concat.ts  09_method_calls  09_method_calls.ts  10_nested_loops  10_nested_loops.ts  11_prime_sieve  11_prime_sieve.ts  12_binary_trees  12_binary_trees.ts  13_factorial  13_factorial.ts  14_closure  14_closure.ts  15_mandelbrot.ts  16_matrix_multiply.ts  run_benchmarks.sh
crates/perry/: Cargo.toml
crates/perry-codegen/: Cargo.toml
crates/perry-diagnostics/: Cargo.toml
crates/perry-hir/: Cargo.toml
crates/perry-hir/src/: ir.rs  js_transform.rs  lib.rs  lower.rs  monomorph.rs
crates/perry-jsruntime/: Cargo.toml
crates/perry-jsruntime/src/: bridge.rs  interop.rs  lib.rs  modules.rs  ops.rs
crates/perry-parser/: Cargo.toml
crates/perry-parser/src/: lib.rs
crates/perry-runtime/: Cargo.toml
crates/perry-runtime/src/: arena.rs  array.rs  bigint.rs  box.rs  buffer.rs  builtins.rs  child_process.rs  closure.rs  date.rs  error.rs  exception.rs  fs.rs  lib.rs  map.rs  math.rs  net.rs  object.rs  os.rs  path.rs  process.rs  promise.rs  redis_client.rs  regex.rs  set.rs  string.rs  timer.rs  url.rs  value.rs
crates/perry-stdlib/: Cargo.toml
crates/perry-stdlib/src/: argon2.rs  async_local_storage.rs  axios.rs  bcrypt.rs  cheerio.rs  commander.rs  cron.rs  crypto.rs  dayjs.rs  decimal.rs  dotenv.rs  ethers.rs  events.rs  exponential_backoff.rs  fetch.rs  ioredis.rs  jsonwebtoken.rs  lib.rs  lodash.rs  lru_cache.rs  moment.rs  mongodb.rs  nanoid.rs  nodemailer.rs  ratelimit.rs  sharp.rs  slugify.rs  sqlite.rs  uuid.rs  validator.rs  ws.rs  zlib.rs
crates/perry-stdlib/src/common/: async_bridge.rs  dispatch.rs  handle.rs  mod.rs
crates/perry-stdlib/src/fastify/: app.rs  context.rs  mod.rs  router.rs  server.rs
crates/perry-stdlib/src/framework/: json.rs  mod.rs  request.rs  response.rs  server.rs
crates/perry-stdlib/src/mysql2/: connection.rs  mod.rs  pool.rs  result.rs  types.rs
crates/perry-stdlib/src/pg/: connection.rs  mod.rs  pool.rs  result.rs  types.rs
crates/perry-transform/: Cargo.toml
crates/perry-transform/src/: closure.rs  inline.rs  lib.rs
crates/perry-types/: Cargo.toml
crates/perry-ui/: Cargo.toml
crates/perry-ui-macos/: Cargo.toml
docs/: CROSS_PLATFORM.md  native-libraries.md  vscode-feasibility-results.md
example-code/blockchain-demo/: demo.ts  package-lock.json  package.json  test_array_map_class.ts  test_async_map.ts  test_callback.ts  test_callback10.ts  test_callback11.ts  test_callback12.ts  test_callback13.ts  test_callback14.ts  test_callback15.ts  test_callback16.ts  test_callback17.ts  test_callback18.ts  test_callback19.ts  test_callback2.ts  test_callback20.ts  test_callback3.ts  test_callback4.ts  test_callback5.ts  test_callback6.ts  test_callback7.ts  (+25 more)
test-files/: test_array_methods.ts  test_array_slice.ts  test_async.ts  test_async2.ts  test_async3.ts  test_async4.ts  test_async5.ts  test_async_chain.ts  test_bitwise.ts  test_break_continue.ts  test_cli_simulation.ts  test_closure_complex.ts  test_compound.ts  test_crypto.ts  test_data_pipeline.ts  test_date.ts  test_decorators.ts  test_default_params.ts  test_destructuring.ts  test_enum.ts  test_exponent.ts  test_for.ts  test_for_in.ts  test_fs.ts  test_generic_class.ts  test_generic_func.ts  test_getters_setters.ts  test_incr.ts  test_inheritance.ts  test_integration_app.ts  test_json.ts  test_map.ts  test_math.ts  test_method_inherit.ts  test_method_override.ts  test_mixed_arrays.ts  test_mutable_capture.ts  test_optional_chain.ts  test_path.ts  test_private_fields.ts  (+20 more)
tests/: test_async.ts  test_async_chain.ts  test_async_debug.ts  test_async_delayed.ts  test_async_func.ts  test_async_nested.ts  test_async_params.ts  test_async_simple.ts  test_async_two_locals.ts  test_async_two_params.ts  test_break.ts  test_closure_arg.ts  test_continue.ts  test_for.ts  test_generics.ts  test_import.ts  test_throw_debug.ts  test_try_catch.ts  test_try_simple.ts
(+142 files in other folders)
