[package]
name = "perry-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level intermediate representation for Perry"

[dependencies]
perry-types.workspace = true
perry-diagnostics.workspace = true
swc_ecma_ast.workspace = true
swc_common.workspace = true

thiserror.workspace = true
anyhow.workspace = true
