[package]
name = "perry-jsruntime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "V8 JavaScript runtime for npm module support in Perry"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
perry-runtime = { path = "../perry-runtime" }
perry-types.workspace = true

# V8 runtime via deno_core
deno_core = "0.311"

# Async runtime for V8
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Lazy initialization
once_cell = "1.19"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
log.workspace = true

# Serialization for module metadata
serde.workspace = true
serde_json.workspace = true

[features]
default = []
