[package]
name = "perry-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library implementations: fs, http, crypto, mysql, postgres"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# Default: include everything for backwards compatibility
default = ["full"]

# Full stdlib - everything included
full = ["http-server", "http-client", "database", "crypto", "compression", "email", "websocket", "image", "scheduler", "ids", "html-parser", "rate-limit", "validation"]

# Minimal core - just what's needed for basic programs
core = []

# HTTP server (hyper-based native framework)
http-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:dashmap", "async-runtime"]

# HTTP client (node-fetch, axios)
http-client = ["dep:reqwest", "async-runtime"]

# WebSocket
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "async-runtime"]

# Databases
database = ["database-postgres", "database-mysql", "database-sqlite", "database-redis", "database-mongodb"]
database-postgres = ["dep:sqlx", "async-runtime"]
database-mysql = ["dep:sqlx", "async-runtime"]
database-sqlite = ["dep:rusqlite"]
database-redis = ["dep:redis", "async-runtime"]
database-mongodb = ["dep:mongodb", "dep:bson", "async-runtime"]

# Crypto (sha256, md5, bcrypt, jwt, etc.)
crypto = ["dep:sha2", "dep:md-5", "dep:hex", "dep:hmac", "dep:bcrypt", "dep:jsonwebtoken", "dep:aes", "dep:cbc", "dep:scrypt", "dep:pbkdf2", "dep:argon2", "dep:base64"]

# Compression (zlib)
compression = ["dep:flate2"]

# Email (nodemailer)
email = ["dep:lettre", "async-runtime"]

# Image processing (sharp)
image = ["dep:image"]

# HTML parsing (cheerio)
html-parser = ["dep:scraper"]

# Scheduler (cron)
scheduler = ["dep:cron", "dep:tokio-cron-scheduler", "async-runtime"]

# Rate limiting
rate-limit = ["dep:governor", "async-runtime"]

# Validation
validation = ["dep:validator", "dep:regex"]

# UUID/nanoid
ids = ["dep:uuid", "dep:nanoid"]

# Async runtime (tokio) - internal feature
async-runtime = ["dep:tokio"]

[dependencies]
perry-runtime.workspace = true

thiserror.workspace = true
anyhow.workspace = true

# Always needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"  # Required by lodash (core module)

# === OPTIONAL DEPENDENCIES ===

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"], optional = true }

# HTTP Server
hyper = { version = "1.4", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }
dashmap = { version = "6.0", optional = true }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres"], optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"], optional = true }
bson = { version = "2.9", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Crypto
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
scrypt = { version = "0.11", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
argon2 = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }

# Compression
flate2 = { version = "1.0", optional = true }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"], optional = true }

# Image
image = { version = "0.25", optional = true }

# HTML parser
scraper = { version = "0.19", optional = true }

# Scheduler
cron = { version = "0.12", optional = true }
tokio-cron-scheduler = { version = "0.10", optional = true }

# Rate limiting
governor = { version = "0.6", optional = true }

# Validation
validator = { version = "0.18", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }

# IDs
uuid = { version = "1.11", features = ["v4", "v1", "v7"], optional = true }
nanoid = { version = "0.4", optional = true }

# LRU Cache
lru = "0.12"

# CLI parsing (Commander)
clap = { version = "4.4", features = ["derive"] }

# Decimal math (Big.js / Decimal.js)
rust_decimal = { version = "1.33", features = ["maths"] }
